IE/Edge messed up z-index, this fixes the bg vid display

--- a/css/application.css
+++ b/css/application.css
@@ -10,7 +10,7 @@ body {
   visibility: hidden;
 }
 .hello .backgroundVideo {
-  z-index: 4;
+  z-index: 7;
   visibility: hidden;
 }
 .hello #video_container {
@@ -23,7 +23,7 @@ body {
 }
 .hello #video_container #text {
   position: absolute;
-  z-index: 6;
+  z-index: 8;
   text-align: center;
   opacity: 0;
 }
